# python-ka-course-by-harry

./: 01_first_program.py  02_variables.py  03_DataTypes.py  04_Operators.py  05_Type.py  06_Input.py  07_Intro to strings.py  08_stringSlicing.py  09_Negative_StringSlicing.py  10 _String_function.py  11_list.py  12_functions_In_list.py  13_tuples.py  14_tupleFunctions.py  15_Dictionary.py  16_Dictionary_function.py  17_DictionaryAdvanced.py  18_sets.py  19_setFunctions.py  20_conditional.py  21_conditionals_part.py  22_mutiple_if_conditional.py  23_loops.py  24_forloops.py  25_for_loop_iterate.py  26_for_withElse.py  27_break_continue_pass.py  28_function.py  29_functionparameters.py  30_functionparametersPart2.py  31_default_parameter.py  32_Recursion.py  33_lambdaFunctions.py  34_file_input_output.py  35_file.txt  36_File_write.py  37_myExp_file.txt  38_more_Fileio_options.py  39_Readfile.txt  40_file_io_append.py  (+13 more)
Data_Analytics/: kaggledownload.py  main.py  pyproject.toml
Data_Science/: pyproject.toml
List comprehensions ka learning/: problem1.py  problem2.py  problem3.py
chapter 1 prac/: problem1.py  problem3.py  problem4.py
chapter 10 prac/: challenge1.py  challenge2.py  challenge3.py  problem1.py  problem2.py  problem3.py  problem4.py  problem5.py  problem6.py
chapter 2 prac/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py  problem6.py
chapter 3 prac/: problem1.py  problem2.py  problem4.py
chapter 4 prac/: problem1.py  problem2.py  problem4.py  problem5.py
chapter 5 prac/: problem1.py  problem2.py  problem3.py  problem5.py  (+2 more)
(+88 files in other folders)
