[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.1",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyttsx3>=2.98",
    "torch>=2.7.0",
    "voila>=0.5.8",
]
